<resources>
    <string name="app_name">Pataza</string>

    <string name="action_refresh">Refresh</string>

    <string name="failure_network_connection">No Network Connection.</string>
    <string name="failure_server_error">Server Error</string>
    <string name="failure_movies_list_unavailable">Movies Unavailable.</string>
    <string name="failure_movie_non_existent">Movie Not Existent.</string>

    <string name="register_title">Registro</string>
    <string name="register_subtitle">Antes de adoptar una mascota, registra tus datos para saber un poco mas de ti</string>
    <string name="register_name">Nombres</string>
    <string name="register_last_name">Apellidos</string>
    <string name="register_email">Correo electronico</string>
    <string name="register_phone">Numero de contacto</string>
    <string name="register_button">Registrar</string>
    <string name="register_exist_account">¡Ya tengo una cuenta!</string>
    <string name="petlist_title">Adopta una mascota</string>
    <string name="petlist_subtitle">Antes de adoptar una mascota, registra tus datos para saber un poco mas de ti</string>
    <string name="tab_enviadas">Solicitudes enviadas</string>
    <string name="tab_recibidas">Solicitudes recibidas</string>
    <string name="txt_dar_adopcion">Dar en adopcion</string>
    <string name="add_pet_title">Registro de la mascota</string>
    <string name="add_pet_subtitle">Llena todos los campos para que la persona que va adoptar conozca a tu mascota</string>
    <string name="add_hint_name">Nombre</string>
    <string name="add_hint_years">Edad</string>
    <string name="add_hint_height">Tamaño</string>
    <string name="add_hint_color">Color</string>
    <string name="add_hint_type">Raza</string>
    <string name="add_hint_description">Descripcion</string>
    <string name="add_hint_history">Historia de la mascota</string>
    <string name="add_continue">Enviar</string>
    <string name="add_subtitle_2">Toma algunas fotos de la mascota que daras en adopcion, para aumentar la posibilidad de encontrarle hogar</string>
    <string name="tx_photo_camera">Camara</string>
    <string name="tx_photo_gallery">Galeria</string>
    <string name="dialog_btn_continue">Continuar</string>
    <string name="permissions_store">Se necesita este permiso para continuar</string>
    <string name="permissions_button">Volver a intentar</string>
    <string name="register_password">Contraseña</string>
    <string name="register_error_request">Falta llenar algunos campos</string>
    <string name="profile_hello">Hola!</string>
    <string name="profile_edit">Mis datos</string>
    <string name="profile_pets">Mis mascotas</string>
    <string name="profile_request">Mis solicitudes</string>
    <string name="edit_profile_name">Nombre</string>
    <string name="edit_profile_phone">Telefono</string>>
    <string name="edit_profile_birthdate">Fecha de nacimiento</string>
    <string name="edit_profile_address">Direccion</string>
    <string name="edit_profile_country">Pais</string>
    <string name="edit_profle_save">Guardar</string>
    <string name="edit_profile_title">Mis Datos</string>
    <string name="title_activity_maps">Map</string>
    <string name="edit_profile_confirm_address">Elegir</string>
    <string name="edit_profile_address_pick">Latitud: %1$s   Longitud: %2$s</string>
    <string name="add_hint_only_years">Años</string>
    <string name="add_hint_months">Meses</string>
    <string name="add_hint_weight">Peso</string>
    <string name="add_hint_gender">Genero</string>
    <string name="add_hint_vaccines">Vacunas</string>
    <string name="add_hint_qualities">Cualidades</string>
    <string name="add_hint_diseases">Enfermedades</string>
    <string name="add_pet_optional">Campos opcionales</string>
    <string name="bt_pick_color">Elegir</string>
    <string name="tx_pick_color">%1$s Color</string>
    <string name="tx_pick_colors">%1$s Colores</string>
    <string name="profile_logout">Cerrar sesion</string>
    <string name="forget_password_title">Ingrese su correo para enviarle el codigo de seguridad</string>
    <string name="forget_password_email">Email</string>
    <string name="forget_password_code">Codigo de seguridad</string>

</resources>
